# markovlib

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
examples/: 01_hmm_quickstart.py  02_semi_markov_durations.py  03_kalman_filter_smoother.py  04_particle_filter.py  05_decidable_dispatch.py  verify_fungeom_bridge.py
src/markovlib/: __init__.py  belief.py  dispatch.py  duration.py  fungeom.py  learn.py  model.py  product.py  query.py  resolution.py  semiring.py
src/markovlib/engines/: __init__.py  exact_chain.py  gaussian.py  particle.py  recursion.py  segmental.py
tests/: test_exact_chain.py  test_examples.py  test_gaussian.py  test_learn.py  test_particle.py  test_particle_smoother.py  test_product.py  test_sample_path.py  test_segmental.py
