[project]
name = "markovlib"
version = "0.0.1"
description = "Markov-like processes as a factor graph with repeated temporal structure: one recursion, parameterized by a belief algebra + semiring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "scipy>=1.11"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markovlib"]

[tool.ruff]
line-length = 120

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
